fixed section1 add margin o auto, shenged max width, fixxedsection3 fixed paddings,deleted whidth calc, fixed section4 add paddings in decktop 120, shenged row gap 48px

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,8 @@ button {
 .main {
   padding-top: 72px;
   padding-bottom: 72px;
-  min-width: 320px;
+  max-width: 320px;
+  margin: 0 auto;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -438,7 +439,7 @@ button {
 }
 @media screen and (min-width: 1158px) {
   .main {
-    max-width: 1158px;
+    max-width: 1440px;
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(
@@ -545,7 +546,8 @@ button {
 .team {
   background-color: #f4f4fd;
   padding-top: 96px;
-  padding-bottom: 28px;
+  padding-bottom: 96px;
+  margin: 0 auto;
 }
 .team-title {
   font-weight: 700;
@@ -624,11 +626,7 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) {
-  .team {
-    max-width: 768px;
-    padding-top: 96px;
-    padding-bottom: 96px;
-  }
+    
   .team-list {
     flex-direction: row;
     flex-wrap: wrap;
@@ -641,12 +639,11 @@ button {
      }
 
   .team-list-item {
-  flex-basis: calc((100% - 24px) / 2);
-  }
+  /*flex-basis: calc((100% - 24px) / 2);
+  */}
 }
 @media screen and (min-width: 1158px) {
   .team {
-    max-width: 1158px;
     padding-top: 120px;
     padding-bottom: 120px;
   }
@@ -752,8 +749,11 @@ button {
 }
 }
 @media screen and (min-width: 1158px) {
-   .portfolio-list {
-   row-gap: 0px;
+   
+  .portfolio-list {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    row-gap: 48px;
   }
 
   .portfolio-list-item {
